# libqu

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  doxygen.yml  emscripten.yml  main.yml
cmake/: config.cmake.in
docs/: Doxyfile  get-version.sh  header.html
include/libqu/: libqu.h
samples/: CMakeLists.txt
samples/audio/: CMakeLists.txt  audio.c
samples/clock/: CMakeLists.txt  clock.c
samples/draw/: CMakeLists.txt  draw.c
samples/hello/: CMakeLists.txt  hello.c
samples/hello-android/app/: build.gradle
samples/hello-android/app/src/main/: AndroidManifest.xml
samples/hello-android/app/src/main/cpp/: CMakeLists.txt  native-lib.c
samples/hello-android/app/src/main/res/values/: themes.xml
samples/hello-android/app/src/main/res/values-night/: themes.xml
samples/hello-android/gradle/wrapper/: gradle-wrapper.properties
samples/image/: CMakeLists.txt  image.c
samples/keyboard/: CMakeLists.txt  keyboard.c
samples/mouse/: CMakeLists.txt  mouse.c
src/: CMakeLists.txt  qu.c  qu.h  qu_activity_android.c  qu_array.c  qu_audio.c  qu_audio.h  qu_audio_null.c  qu_audio_openal.c  qu_audio_sles.c  qu_audio_xaudio2.c  qu_audio_xaudio2.cpp  qu_core.c  qu_core.h  qu_core_android.c  qu_core_emscripten.c  qu_core_win32.c  qu_core_x11.c  qu_fs.c  qu_fs.h  qu_graphics.c  qu_graphics.h  qu_graphics_es2.c  qu_graphics_gl2.c  qu_graphics_gl2_impl.h  qu_graphics_null.c  qu_image.c  qu_image_loader.c  qu_joystick_linux.c  qu_joystick_null.c  qu_joystick_win32.cpp  qu_log.c  qu_log.h  qu_math.c  qu_math.h  qu_platform.h  qu_platform_posix.c  qu_platform_win32.c  qu_renderer_es2.c  qu_renderer_gl1.c  (+14 more)
tests/: 01-hello.c  02-audio.c  CMakeLists.txt  qu_array_test.c  qu_fs_test.c
